--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="dropdown dropdown-end">
                         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
                             <div class="w-10 rounded-full">
-                                <img src="/images/icons/star-regular.svg" />
+                                <img src="./images/icons/star-regular.svg" />
                             </div>
                         </label>
                         <ul tabindex="0"
@@ -109,7 +109,7 @@
             <!-- cards -->
             <div class="grid lg:gap-5 md:gap-5 gap-5 lg:grid-cols-3 md:grid-cols-2 grid-cols-1">
                 <div class="card  bg-base-100 shadow-xl image-full">
-                    <figure><img src="/images/slider/bike1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/slider/bike1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Clothes</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="card  bg-base-100 shadow-xl image-full">
-                    <figure><img src="/images/slider/bike1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/slider/bike1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Clothes</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="card bg-base-100 shadow-xl image-full">
-                    <figure><img src="/images/slider/bike1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/slider/bike1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Clothes</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
@@ -148,7 +148,7 @@
                 <p> ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, laboriosam?</p>
             </div>
             <div class="flex-1">
-                <img src="images/slider/bike2.png" alt="">
+                <img src="./images/slider/bike2.png" alt="">
             </div>
         </section>
 
