some changesin footer section

--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                 </div>
             </div> -->
         <!-- cards -->
-        <div class="grid gap-5 sm:grid-2 md:grid-cols-3 lg:grid-cols-4 py-5">
+        <div
+            class="grid gap-5 sm:grid-2 md:grid-cols-3 lg:grid-cols-4 py-5 max-w-screen-xl mx-auto px-8 md:px-16 lg:px-24 py-5 my-10">
             <div class="card bg-base-100 shadow-xl">
                 <figure><img src="./images/slider/bike3.png" alt="Shoes" /></figure>
                 <div class="card-body">
@@ -267,8 +268,8 @@
         </section>
     </main>
     <!-- footer section -->
-    <footer>
-        <footer class="footer p-10 bg-neutral text-neutral-content">
+    <footer class="">
+        <footer class="footer p-10 bg-neutral text-neutral-content justify-around">
             <div>
                 <span class="footer-title">Services</span>
                 <a class="link link-hover">Branding</a>
